some tweaks to nav

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" media"(max-width:800px)" href="css/index.css">
   <meta name=“viewport” content=“width=device-width, initial-scale=1”>
 
 </head>
@@ -14,7 +14,7 @@
   <body>
 
   <div class="navigation">
-    <nav>
+    <nav class="space">
   <a href= "#">Services</a>
   <a href= "#">Product</a>
   <a href= "#">Vision</a>
