--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" media"(max-width:800px)" href="css/index.css">
+  <link rel="stylesheet" media"(max-width:500px)" href="css/index.css">
   <meta name=“viewport” content=“width=device-width, initial-scale=1”>
 
 </head>
@@ -40,6 +41,7 @@
   </header>
 
 <section>
+  
 <div class="side-side">
   <div class= "features">
  <h2>Features</h2> 
@@ -69,6 +71,7 @@
 <div>
  <h2>Vision</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
 </div>
 </div>
 
