changed navivation for tablet view

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 </div>
 <div class= "top-image">
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+  <img class="hide" src="img/header-img.png" alt="Image of a code snippet.">
 </div>
   </header>
 
