--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></div>
   <header class= "head-section">
     <div class="header1">
-    <h1>Innovation 
+    
+    <h1 class="innovation">Innovation 
     On
   Demand</h1>
 
