--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 </section>
 
 <section>
+  <div class="contactadress">
   <h2>Contact</h2> 
   <address>
   123 Way 456 Street <br>
@@ -86,6 +87,7 @@
   1 (888) 888-8888 <br>
   sales@greatidea.io
   </address>
+  </div>
   </section>
 
   <footer>
