put styles under same media

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" media"(max-width:800px)" href="css/index.css">
-  <link rel="stylesheet" media"(max-width:500px)" href="css/index.css">
+  <link rel="stylesheet" href="css/index.css"><link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <meta name=“viewport” content=“width=device-width, initial-scale=1”>
 
 </head>
 
   <body>
-
+<div class="container">
   <div class="navigation">
     <nav class="space">
   <a href= "#">Services</a>
@@ -93,5 +92,6 @@
   <footer>
   Copyright Great Idea! 2018
   </footer>
+</div>
 </body>
 </html>
