--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 
   <section>
   <div class="side-side second">
-    <div>
+    <div class= "last">
   <h2>Services</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </div>
   
-<div>
+<div class= "product">
   <h2>Product</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 </div>
